--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
@@ -1,6 +1,6 @@
 ﻿@*<div id="addPrivateEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>*@
 <section class="lobby-overview">
-	<div class="inline-block" style="width: 51%;">
+	<div class="inline-block" style="width: 51%;position:relative;top:-1px;">
 		<div class="overview-events-list-container">
 			<div class="dashboard-title">Nadchodzące wydarzenia</div>
 			<ul data-bind="foreach: $root.lobbyPage.dashboardPart.upcomingPublicEventsVM">
@@ -14,7 +14,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="inline-block" style="width: 49%; float: right; color: white;">
+	<div class="inline-block" style="width: 49%; float: right; color: white;position:relative;top:-1px;">
 		<div class="overview-events-list-container" style="background: #fdfdfd;">
 			<div class="dashboard-title">Mój kalendarz</div>
 
