--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -4,7 +4,7 @@
 
 </section>
 <section class="dz-row dashboard-part">
-
+	<header class="section-title">Przegląd</header>
 	@Html.Partial( "_DashboardPart" )
 
 </section>
