--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -161,7 +161,7 @@
               </div>
             </div>
 
-            <button id="btnAddNewEvent" class="green-color btn-add hover-cursor-pointer" data-bind="click: $root.addEventOnClick">
+            <button id="btnAddNewEvent" class="btn-add hover-cursor-pointer" data-bind="click: $root.addEventOnClick">
               dodaj
             </button>
           </div>
