--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -1,7 +1,7 @@
 ﻿<li style="list-style: none;">
 	<div style="width: 100px; float: left; clear: both; height: 54px;">
 		<span class="list-item-date">
-			<span style="font-size: 1.6em; width: 26px; display: inline-block; color: #716c67;" data-bind="text: startDate.formatZero( startDate.day )"></span>
+			<span style="font-size: 1.6em; width: 26px; display: inline-block;" data-bind="text: startDate.formatZero( startDate.day )"></span>
 			<span class="list-item-month" data-bind="text: startDate.formatZero( startDate.month )"></span>
 			<span class="list-item-year" data-bind="text: startDate.year"></span>
 			<span class="list-item-other" data-bind="text: startDate.displayFullTime()" style="position: relative; bottom: 10px;"></span>
@@ -11,11 +11,11 @@
 		<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 			<div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
 				<span data-bind="text: kind.name"></span>
+				<div style="color: #b3aea8;">
+					<span data-bind="text: startDate.displayInfo()"></span>
+				</div>
 			</div>
-			<div>
-				<span class="list-item-date" data-bind="text: startDate.displayInfo()"></span>
-			</div>
-			<div style="padding-bottom: 10px;">
+			<div padding-bottom: 4px;">
 				<span class="list-item-title" data-bind="text: name"></span>
 			</div>
 		</div>
