--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventListMenu.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventListMenu.cshtml
@@ -21,9 +21,9 @@
 			  <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 				  <div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
 					  <span data-bind="text: kind.name"></span>
-				  </div>
-				  <div>
-					  <span class="list-item-date" data-bind="text: startDate.displayInfo()"></span>
+					  <div style="color: #b3aea8;">
+						  <span data-bind="text: startDate.displayInfo()"></span>
+					  </div>
 				  </div>
 				  <div style="padding-bottom: 10px;">
 					  <span class="list-item-title" data-bind="text: name"></span>
@@ -59,9 +59,9 @@
 			  <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
 				  <div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
 					  <span data-bind="text: kind.name"></span>
-				  </div>
-				  <div>
-					  <span class="list-item-date" data-bind="text: startDate.displayInfo()"></span>
+					  <div style="color: #b3aea8;">
+						  <span data-bind="text: startDate.displayInfo()"></span>
+					  </div>
 				  </div>
 				  <div style="padding-bottom: 10px;">
 					  <span class="list-item-title" data-bind="text: name"></span>
