--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,27 +1,20 @@
 ﻿<section class="dz-row nav-part">
-
 	@Html.Partial( "_NavPart" )
-
 </section>
 <section class="dz-row dashboard-part">
 	<header class="section-title">Przegląd</header>
 	@Html.Partial( "_DashboardPart" )
-
 </section>
 <section class="dz-row upcoming-events-part">
 	<header class="section-title">Nadchodzące wydarzenia</header>
-
 	@Html.Partial( "_UpcomingEventsPart" )
-
 </section>
 <section class="dz-row event-grid-part">
 	<header class="section-title">Tablica wydarzeń</header>
-
-	@Html.Partial("_EventGridPart");
-
+	@Html.Partial("_EventGridPart")
 	@*	@Html.Partial( "_LobbyNews" )*@
 	<footer class="lobby-footer">
-		<span>Kalendarz Kariery 2015, wszelkie prawa zastrzeżone</span>
+		<span>Kalendarz Kariery 2017, wszelkie prawa zastrzeżone</span>
 	</footer>
 </section>
 
