--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -23,15 +23,15 @@
 	background: #fbfbfb;
 }
 
-#detailsEventBlockList .event-block-info-link {
+#detailsEventBlockList .event-block-link {
 	word-break: break-all;
 }
 
-#detailsEventBlockList .event-block-info-name {
+#detailsEventBlockList .event-block-name {
 	font-size: 1.5em;
 	color: #636363;
 	padding: 10px;
-	background:#f3f3f3;
+	background: #f3f3f3;
 }
 
 #detailsEventBlockList .event-kind-tag {
@@ -47,36 +47,27 @@
 	font-size: 1.2em;
 }
 
-#detailsEventBlockList .event-block-info-address {
-	color: rgb(72, 68, 62);
-}
-
 #detailsEventBlockList .event-block-footer {
 	padding: 10px;
 	overflow: hidden;
 	color: #dedede;
 }
 
-#detailsEventBlockList .event-block-info-date {
+#detailsEventBlockList .event-block-date {
 	margin-bottom: 2px;
 	font-size: 1em;
 	color: rgb(76, 76, 76);
 }
 
-#detailsEventBlockList .event-block-info-body {
-	margin-top: 20px;
-}
-
-#detailsEventBlockList .event-block-info-time {
+#detailsEventBlockList .event-block-time {
 	font-size: 1.8em;
-	color: rgb(76, 76, 76);
 }
 
-#detailsEventBlockList .block-info-description {
+#detailsEventBlockList .event-block-description {
 	color: #f7f7f7;
 }
 
-#detailsEventBlockList .block-info-details {
+#detailsEventBlockList .event-block-details {
 	color: #f7f7f7;
 }
 
@@ -85,7 +76,7 @@
 	text-align: right;
 }
 
-#detailsEventBlockList .event-block-info-price {
+#detailsEventBlockList .event-block-price {
 }
 
 #detailsEventBlockList .event-block-menu {
@@ -96,15 +87,14 @@
 
 .event-block-expand .event-block {
 	line-height: 1;
-	background: rgb(253, 253, 253);
-	border-top:2px solid #bbb8b5;
+	background: rgb(249, 248, 246);
 }
 
-.event-block-expand .event-block-info-link {
+.event-block-expand .event-block-link {
 	word-break: break-all;
 }
 
-.event-block-expand .event-block-info-name {
+.event-block-expand .event-block-name {
 	font-size: 1.5em;
 	color: #636363;
 	padding: 6px;
@@ -134,22 +124,17 @@
 	color: rgb(152, 152, 137);
 }
 
-.event-block-expand .event-block-info-date {
+.event-block-expand .event-block-date {
 	margin-bottom: 2px;
 	font-size: 1.6em;
 }
 
-.event-block-expand .event-block-info-body {
-	margin-top: 20px;
-}
-
-.event-block-expand .event-block-info-time {
+.event-block-expand .event-block-time {
 	font-size: 1.2em;
-	color: #969689;
 }
 
 .event-block-expand .event-block-info-addedby {
-	color: gray;
+	color: #ADABAA;
 	text-align: right;
 }
 
