--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventBlock.cshtml
@@ -1,64 +1,64 @@
 ﻿<div class="details-event-block-container" data-bind="attr: { 'data-eventid': id }">
-  <div class="details-event-block">
-    <div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
-      <span data-bind="text: kind.name"></span>
-    </div>
-    <div class="details-event-block-body hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
-      <div class="details-event-block-info-time">
-        <span data-bind="text: startDate.displayFullTime()"></span>
-      </div>
-      <div class="details-event-block-info-date">
-        <span data-bind="text: startDate.displayFullDate()"></span>
-      </div>
-      <div class="details-event-block-info-address">
-        <div data-bind="text: address.street, visible: ( address.street != '' && address.street != null )"></div>
-        <span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind="text: ' ' + address.city, visible ( address.city !='' && address.city !=null )"></span>
-      </div>
-      <div class="details-event-block-info-body">
-        <div style="position:relative;left:-25px;">
-          <div style="display: inline-block; vertical-align: top;" data-bind="if: privacyLevel.value == 2">
-            <div style="height: 30px; width: 28px; background: url(/Images/Icons/star.png); background-size: contain;">
-            </div>
-          </div>
-          <div style="font-size: 1.6em; display: inline-block;">
-            <span data-bind="text: name"></span>
-          </div>
-        </div>
-        
-        <div class="event-block-info-description">
-          <p data-bind="text: description"></p>
-        </div>
-        <div class="event-block-info-details">
-          <p data-bind="text: details"></p>
-        </div>
-        <p class="details-event-block-info-price" data-bind="visible: price != 0 && price != ''">
-          <span style="width: 100px;">opłata za wstęp:</span>
-          <span data-bind="text: price + 'zł.'"></span>
-        </p>
-        <div class="details-event-block-info-occupancyLimit" data-bind="visible: occupancyLimit != null && occupancyLimit != ''">
-          <div style="display: inline-block; width: 100px;">limit miejsc:</div>
-          <a data-bind="text: occupancyLimit"></a>
-        </div>
-        <div class="event-block-info-link">
-          <p>
-            <a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
-          </p>
-        </div>
-        <div class="details-event-block-info-addedby">
-          <div><span data-bind="text: addedBy"></span></div>
-          <span data-bind="text: dateAdded.displayFullTime()"></span><span>&nbsp;&nbsp;</span><span data-bind="text: dateAdded.displayFullDate()"></span>
-        </div>
-      </div>
-    </div>
-    <div class="details-event-block-footer">
-      <div style="float: right;">
-        <div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
-          <div style="text-align: right; font-size: 18px;">
-            <div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
-            <div style="display: inline-block;" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="details-event-block">
+		<div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
+			<span data-bind="text: kind.name"></span>
+		</div>
+		<div class="details-event-block-body hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
+			<div class="details-event-block-info-time">
+				<span data-bind="text: startDate.displayFullTime()"></span>
+			</div>
+			<div class="details-event-block-date">
+				<span data-bind="text: startDate.displayFullDate()"></span>
+			</div>
+			<div class="details-event-block-info-address">
+				<div data-bind="text: address.street, visible: ( address.street != '' && address.street != null )"></div>
+				<span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind="	text: ' ' + address.city, visible ( address.city !='' && address.city !=null )"></span>
+			</div>
+			<div class="details-event-block-info-body">
+				<div style="position: relative; left: -25px;">
+					<div style="display: inline-block; vertical-align: top;" data-bind="if: privacyLevel.value == 2">
+						<div style="height: 30px; width: 28px; background: url(/Images/Icons/star.png); background-size: contain;">
+						</div>
+					</div>
+					<div style="font-size: 1.6em; display: inline-block;">
+						<span data-bind="text: name"></span>
+					</div>
+				</div>
+
+				<div class="event-event-block-description">
+					<p data-bind="text: description"></p>
+				</div>
+				<div class="event-event-block-details">
+					<p data-bind="text: details"></p>
+				</div>
+				<p class="details-event-block-price" data-bind="visible: price != 0 && price != ''">
+					<span style="width: 100px;">opłata za wstęp:</span>
+					<span data-bind="text: price + 'zł.'"></span>
+				</p>
+				<div class="details-event-block-occupancylimit" data-bind="visible: occupancyLimit != null && occupancyLimit != ''">
+					<div style="display: inline-block; width: 100px;">limit miejsc:</div>
+					<a data-bind="text: occupancyLimit"></a>
+				</div>
+				<div class="event-block-link">
+					<p>
+						<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
+					</p>
+				</div>
+				<div class="details-event-block-info-addedby">
+					<div><span data-bind="text: addedBy"></span></div>
+					<span data-bind="text: dateAdded.displayFullTime()"></span><span>&nbsp;&nbsp;</span><span data-bind="	text: dateAdded.displayFullDate()"></span>
+				</div>
+			</div>
+		</div>
+		<div class="details-event-block-footer">
+			<div style="float: right;">
+				<div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
+					<div style="text-align: right; font-size: 18px;">
+						<div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
+						<div style="display: inline-block;" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
