--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
@@ -7,11 +7,11 @@
     <span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld() == true ? '[zwiń]' : '[rozwiń]'"></span>
     <span class="oldorupcoming-event-count" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.old().length > 0 ? $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.old().length : ''"></span>
   </div>
-  <div class="display-events-overview-item-list" data-bind="foreach: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.old">
-    <div class="display-events-overview-item-list-inner-wrapper">
+  <div class="event-list-item-container-list" data-bind="foreach: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.old">
+    <div class="event-list-item-container-list-inner-wrapper">
       <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-      <div class="display-events-overview-item">
-        <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+      <div class="event-list-item-container">
+        <div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
           <div class="rg-inline-block">
 
             <span class="list-item-title" data-bind="text: name"></span>
@@ -37,11 +37,11 @@
     <span class="oldorupcoming-expand-text sm-hidden" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming() == true ? '[zwiń]' : '[rozwiń]'"></span>
     <span class="oldorupcoming-event-count" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.upcoming().length > 0 ? $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.upcoming().length : ''"></span>
   </div>
-  <div class="display-events-overview-item-list" data-bind="foreach: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.upcoming">
-    <div class="display-events-overview-item-list-inner-wrapper">
+  <div class="event-list-item-container-list" data-bind="foreach: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.upcoming">
+    <div class="event-list-item-container-list-inner-wrapper">
       <div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-      <div class="display-events-overview-item">
-        <div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+      <div class="event-list-item-container">
+        <div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
           <div class="rg-inline-block">
 
             <span class="list-item-title" data-bind="text: name"></span>
