--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
@@ -1,69 +1,106 @@
 ﻿<div class="event-block">
-	<div class="event-kind-tag" data-bind="style: { color: kind.headerColor }">
-		<span data-bind="text: kind.name"></span>
-	</div>
-	<div class="event-block-info-name">
-		<span data-bind="text: name"></span>
-	</div>
-	<div>
-		<span class="list-item-date" data-bind="text: startDate.displayInfo()"></span>
-	</div>
+	<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+	<div class="event-block-name" data-bind="text: name"></div>
 	<div class="event-block-body">
-		<div class="event-block-info-date">
-			<span data-bind="text: startDate.displayFullDate()"></span>
+		<div class="rg-label">kiedy:</div>
+		<div class="event-block-data-content">
+			<span class="event-block-date" data-bind="html: startDate.displayFullDate_EnlargeDay()"></span>
+			<span class="sm-label">(<span class="list-item-date" data-bind="text: startDate.displayInfo()"></span>)</span>
+			<div class="event-block-time" data-bind="text: startDate.displayFullTime()"></div>
 		</div>
-		<div class="event-block-info-time">
-			<span data-bind="text: startDate.displayFullTime()"></span>
+		<div data-bind="if: _isFullAddressDefined() === 'full'">
+			<div class="rg-label">gdzie:</div>
+			<div class="event-block-data-content">
+				<div data-bind="text: address.street"></div>
+				<span data-bind="text: address.zipCode"></span>
+				<span data-bind="text: ' ' + address.city"></span>
+			</div>
 		</div>
-		<div class="event-block-info-address">
-			<div data-bind="text: address.street, visible: ( address.street != '' && address.street != null )"></div>
-			<span data-bind="text: address.zipCode, visible: ( address.city != '' && address.city != null )"></span><span data-bind="text: ' ' + address.city, visible ( address.city !='' && address.city !=null )"></span>
+		<div data-bind="if: _isFullAddressDefined() === 'empty'">
+			<div class="rg-label">
+				<div class="inline-block width-60">gdzie:</div>
+				<span>-</span>
+			</div>
 		</div>
-		<div class="event-block-info-body">
-			<div class="block-info-description">
-				<p data-bind="text: description"></p>
+		<div data-bind="if: _isFullAddressDefined() === 'partial'">
+			<div class="rg-label">gdzie:</div>
+			<div class="event-block-data-content">
+				<div data-bind="ifnot: address.street === null">
+					<span data-bind="text: address.street"></span>
+				</div>
+				<span data-bind="ifnot: address.city === null">
+					<span data-bind="text: address.city"></span>
+				</span>
+				<span data-bind="ifnot: address.zipCode === null">
+					<span data-bind="text: address.zipCode"></span>
+				</span>
 			</div>
-			<div class="block-info-details">
-				<p data-bind="text: details"></p>
+		</div>
+
+
+		<div data-bind="if: _isFullDescriptionDefined() === 'full'">
+			<div class="rg-label">opis:</div>
+			<div class="event-block-data-content">
+				<p class="event-block-description" data-bind="text: description"></p>
+				<p class="event-block-details" data-bind="text: details"></p>
 			</div>
-			<div class="event-block-info-price" data-bind="visible: price != 0 && price != '0' && price != ''">
-				<div>opłata za wstęp:</div>
-				<span style="color: rgb(76, 76, 76);" data-bind="text: price + 'zł.'"></span>
+		</div>
+		<div data-bind="if: _isFullDescriptionDefined() === 'empty'">
+			<div class="rg-label">
+				<div class="inline-block width-60">opis:</div>
+				<span>-</span>
 			</div>
-			<div class="event-block-info-occupancyLimit" data-bind="visible: occupancyLimit != null && occupancyLimit != ''">
-				<div>limit miejsc:</div>
-				<span style="color: rgb(76, 76, 76);" data-bind="text: occupancyLimit"></span>
+		</div>
+		<div data-bind="if: _isFullDescriptionDefined() === 'partial'">
+			<div class="rg-label">opis:</div>
+			<div class="event-block-data-content">
+				<div data-bind="ifnot: description === null">
+					<p class="event-block-description" data-bind="text: description"></p>
+				</div>
+				<div data-bind="ifnot: details === null">
+					<p class="event-block-details" data-bind="text: details"></p>
+				</div>
 			</div>
-			<div class="event-block-info-link">
-				<p>
-					<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
-				</p>
-			</div>
+		</div>
+		<div data-bind="ifnot: price === null">
+			<div class="rg-label">opłata za wstęp:</div>
+			<p class="event-block-price" data-bind="text: price + 'zł.'"></p>
+		</div>
+		<div data-bind="ifnot: occupancyLimit == null">
+			<div class="rg-label">limit miejsc:</div>
+			<p class="event-block-occupancylimit" data-bind="text: occupancyLimit"></p>
+		</div>
+		<div data-bind="ifnot: urlLink === null">
+			<p class="event-block-link">
+				<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
+			</p>
 		</div>
 	</div>
 	<div class="event-block-footer">
-		<div style="float: right;">
-			<div class="event-block-info-addedby">
-				<div><span data-bind="text: addedBy"></span></div>
-				<span data-bind="text: dateAdded.displayFullTime()"></span><span>&nbsp;&nbsp;</span><span data-bind="	text: dateAdded.displayFullDate()"></span>
+		<div class="event-block-footer-right">
+			<div class="event-block-addedby">
+				<div data-bind="text: addedBy"></div>
+				<span data-bind="text: dateAdded.displayFullTime()"></span>
+				<span>&nbsp;&nbsp;</span>
+				<span data-bind="text: dateAdded.displayFullDate()"></span>
 			</div>
 
 			@if (ViewData["page"].ToString() == "lobby")
-   {
-				<a href="#" data-bind="if: isEventAddedToCurrentUserCalendar  , click:function(){ $root.moveToDetailsDayOnEventCalendarIconClick(id, startDate.year, startDate.month, startDate.day) }">pokaż w dzienniku</a>
-   }
-
+			{
+				<div data-bind="if: isEventAddedToCurrentUserCalendar">
+					<a href="#" data-bind="click: function () { $root.moveToDetailsDayOnEventCalendarIconClick( id, startDate.year, startDate.month, startDate.day ) }">pokaż w dzienniku</a>
+				</div>			
+			}
 
 			@if (ViewData["page"].ToString() == "details")
-   {
+			{
 				<div data-bind="if: $root.userName.toUpperCase() == addedBy.toUpperCase()">
 					<div style="text-align: right; font-size: 18px;">
 						<div style="display: inline-block;" class="link details-edit-event-link" data-bind="click: function () { $root.editEventDetailsPageOnEditLinkClick( id, startDate.year, startDate.month, startDate.day ) }"><span>edytuj</span></div>
 						<div style="display: inline-block;" class="link details-delete-event-link" data-bind="click: function () { $root.prepareDeleteEventDetailsPageOnDeleteLinkClick( id, startDate.year, startDate.month, startDate.day, privacyLevel.name ) }"><span>usuń</span></div>
 					</div>
 				</div>
-   }
-
+			}
 		</div>
 	</div>
 </div>
