--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿
-@model KalendarzKarieryData.Models.ViewModels.MainViewModel
-@Html.Partial("_LoginBar")
+﻿@model KalendarzKarieryData.Models.ViewModels.MainViewModel
+@Html.Partial( "_LoginBar" )
 <div id="initialWhiteOverlay"></div>
 <div id="dzieuo" style="visibility: hidden;">
 	<section id="lobby" class="dz-column">
@@ -8,11 +7,11 @@
 	</section>
 
 	<section id="calendar" class="dz-column">
-			<div id="calendarWidget" class="dz-row" style="margin-bottom:0px;top:0;">
+		<div id="calendarWidget" class="dz-row" style="margin-bottom: 0px; top: 0;">
 
-				<!-- Calendar is added dynamically (calendarWidget.js)   -->
+			<!-- Calendar is added dynamically (calendarWidget.js)   -->
 
-			</div>
+		</div>
 	</section>
 
 	<section id="details" class="dz-column">
