--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -6,15 +6,15 @@
 	@Html.Partial( "_DashboardPart" )
 </section>
 <section class="dz-row upcoming-events-part">
-	<header class="section-title">Nadchodzące wydarzenia</header>
+	<header class="section-title">Nadchodzące publiczne wydarzenia</header>
 	@Html.Partial( "_UpcomingEventsPart" )
 </section>
 <section class="dz-row event-grid-part">
-	<header class="section-title">Tablica wydarzeń</header>
+	<header class="section-title">Tablica publicznych wydarzeń</header>
 	@Html.Partial("_EventGridPart")
 	@*	@Html.Partial( "_LobbyNews" )*@
 	<footer class="lobby-footer">
-		<span>Kalendarz Kariery 2017, wszelkie prawa zastrzeżone</span>
+		<span style="text-align: center;">Kalendarz Kariery 2017, wszelkie prawa zastrzeżone</span>
 	</footer>
 </section>
 
