--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventCountTiles.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventCountTiles.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="events-menu-container" data-bind="with: $root.lobbyPage.upcomingEventsPart">
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 7, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 7, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item inne-border-tab"></div>
 		<div class="menu-item" data-eventkind="7">
 			<span>Inne</span>
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 2, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 2, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item lekcje-border-tab"></div>
 		<div class="menu-item" data-eventkind="2">
 			<span>Lekcje</span>
@@ -21,7 +21,7 @@
 	</div>
 
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 1, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 1, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item wydarzenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="1">
 			<span>Wydarzenia</span>
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 6, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 6, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item spotkania-border-tab"></div>
 		<div class="menu-item" data-eventkind="6">
 			<span>Spotkania</span>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 3, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 3, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item zajecia-border-tab"></div>
 		<div class="menu-item" data-eventkind="3">
 			<span>Zajęcia</span>
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 4, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 4, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item szkolenia-border-tab"></div>
 		<div class="menu-item" data-eventkind="4">
 			<span>Szkolenia</span>
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 
-	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 5, eventListMenuVM.getCurrentSelectedEventsProp(), eventListMenuVM ) }">
+	<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnEventCountTileClick( $element, 5, eventListVM.getCurrentSelectedEventsProp(), eventListVM ) }">
 		<div class="border-item kursy-border-tab"></div>
 		<div class="menu-item" data-eventkind="5">
 			<span>Kursy</span>
